content panel overflow bug fix

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -1,9 +1,5 @@
 @import '../../style/vars';
 
-.content-panel {
-  overflow: inherit !important;
-}
-
 .container {
   padding-left: 10px !important;
 }
